css/style.css
/* ... */
img.gender-graph {
	width: 100%;
}




/*
	9
*/
#money {
	width: 70%;
	margin: 0 15%;
	text-align: left;
}

#money-title {
	color: #000;
	color: rgba(0,0,0,0.75);
	font-size: 28px;
	margin: 0 0 5%;
}

#money-title img {
	margin: -10px 10px 0 0;
	vertical-align: middle;
}

#money-image {
	border-bottom: 1px solid #F9D1A1;
	margin: 0 0 5%;
	padding: 0 0 5%;
	width: 100%;
}

#money-text {
	font-family: 'museo_sans500';
	font-size: 29px;
	display: inline-block;
	line-height: 1.2;
}

#money-text strong {
	float: left;
	color: #EA6E00;
	font-size: 76px;
	line-height: 1;
	margin: 0 2% 0 0;
}

/*
	10
*/
.occupation-title {
	color: #000;
	color: rgba(0,0,0,0.75);
	font-size: 28px;
	margin: 0 0 2%;
}

#occupation {
	margin: 4% 0 0;
}

#occupation li {
	list-style: none;
	display: inline-block;
	width: 60%;
	margin: 0 20% 0.4%;
	border-bottom: 1px solid #EF8400;
	position: relative;
	text-align: left;
}

#occupation p.item-1 { width: 99%; background: #EF8400; }
#occupation p.item-2 { width: 69%; background: #EF8400; }
#occupation p.item-3 { width: 56%; background: #EF8400; }
#occupation p.item-4 { width: 56%; background: #EF8400; }
#occupation p.item-5 { width: 50%; background: #EF8400; }
#occupation p.item-6 { width: 22%; background: #EF8400; }
#occupation p.item-7 { width: 22%; background: #EF8400; }
#occupation p.item-8 { width: 27%; background: #EF8400; }


#occupation p {
	font-family: 'museo_sans500';
	font-size: 24px;
	color: white;
	position: relative;
	display: inline-block;
	padding: 10px 5px;
	margin: 0;
}

#occupation p + p {
	position: absolute;
	font-size: 30px;
	color: rgba(0,0,0,0.90);
	top: 0;
	right: 0;
}

/*
	11
*/
#workarea {
	width: 80%;
	margin: 0 10%;
}

#workarea div {
	width: 33%;
	float: left;
	text-align: left;
}

#workarea div h3 {
	font-family: 'museo_sans700';
	font-size: 30px;
}

#workarea div p {
	margin: 10% 0 0;
	font-size: 22px;
	line-height: 27.5px;
}

#workarea ul {
	width: 57%;
	float: right;
}

#workarea li {
	list-style: none;
	display: inline-block;
	width: 100%;
}

#workarea li p {
	display: inline-block;
	width: 15%;
	text-align: right;
}

#workarea li p + p{
	width: 80%;
	text-align: left;
	color: white;
	margin: 0 0 0 1.5%;
	text-transform: uppercase;
}

#workarea li.item-1 { font-size: 30px;}
#workarea li.item-2 { font-size: 30px;}
#workarea li.item-3 { font-size: 30px;}
#workarea li.item-4 { font-size: 28px;}
#workarea li.item-5 { font-size: 24px;}
#workarea li.item-6 { font-size: 22px;}
#workarea li.item-7 { font-size: 22px;}
#workarea li.item-8 { font-size: 20px;}
#workarea li.item-9 { font-size: 18px;}
#workarea li.item-10 { font-size: 18px;}
#workarea li.item-11 { font-size: 16px;}
#workarea li.item-12 { font-size: 16px;}
#workarea li.item-13 { font-size: 16px;}
#workarea li.item-14 { font-size: 14px;}
#workarea li.item-15 { font-size: 14px;}
#workarea li.item-16 { font-size: 12px;}

/*
	12
*/
#time {
	width: 80%;
	margin: 0 10%;
	text-align: left;
}

#time-title {
	color: #000;
	color: rgba(0,0,0,0.75);
	font-size: 28px;
	margin: 0 0 3%;
	text-align: center;
}

#time-title img {
	margin: -10px 10px 0 0;
	vertical-align: middle;
}

#time-data-list {
	margin: 0 0 3% 0;
	width: 100%;
}

#time-data-list li {
	background: #FFF;
	display: inline-block;
	text-align: left;
	vertical-align: top;
	height: 170px;
	font-family: 'museo_sans700';
	padding: 20px 0 0 20px;
	-webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
}

#time-data-list p {
	padding: 0;
	font-size: 18px;
	width: 75px;
	line-height: 1.2;
	margin: 0 0 20px;
}

#time-data-list strong {
	color: #ED8947;
	font-size: 41px;
}

#time-data-01 {
	width: 12.6%;
}

#time-data-02 {
	width: 31.6%;
}

#time-data-03 {
	width: 14.6%;
}

#time-data-04 {
	width: 16.6%;
}

#time-data-05 {
	width: 22.6%;
}

.time-text:last-child {
	border-top: 1px solid #F9D1A1;
	padding-top: 3%;
}

p.time-text {
	font-family: 'museo_sans500';
	font-size: 21px;
	display: inline-block;
	line-height: 1.2;
	margin: 2% 17.5% 0;
	width: 65%;
	display: inline-block;
	padding: 0;
}

p.time-text strong {
	float: left;
	color: #fff;
	color: rgba(255,255,255,0.8);
	font-size: 56px;
	line-height: 1;
	margin: 0 2% 0 0;
}

/*
	14
*/

h3.habits {
	font-family: 'museo_sans700';
	color: #fff;
	margin: 0 0 5%;
	font-size: 32px;
	padding: 0 0 0;
}

.habits-image {
	width: 80%;
}

/*
	15
*/
#information {
	width: 70%;
	margin: 0 15%;
	text-align: center;
}

#information-title {
	display: inline-block;
	padding: 0 0 3% 2%;
	color: #000;
	color: rgba(0,0,0,0.75);
	font-size: 28px;
}


/*
	16
*/
p.disqus-text {
	padding: 1% 0 0 !important
}

#disqus_thread, .disqus_iframe {
	width: 60%;
	background: #FFF;
	padding: 1.5% 3%;
	margin: 2% 17% 0;
}

/*********************************** Bloco 2 **********************************************************************/
.financing {
	background: radial-gradient(circle, #99d8a9, #64c47d)
}

.financing h3 {
	font-size: 30px;
	padding: 2% 0 0;
}

.white-title {
	color: #fff;
}

.financing p {
	font-size: 24px;
	line-height: 36px;
	color: #000;
	color: rgba(0,0,0,0.75);
	padding: 3% 22% 0;
}

/*
	18
*/
p.crowdfunding {
	font-size: 24px;
	line-height: 36px;
	color: #000;
	color: rgba(0,0,0,0.75);
	padding: 1% 30% 0;
}

.ballon {
	background: url("../img/financiamento/grafico-financiamento-2.png") center center no-repeat;
	width: 875px;
	height: 430px;
	margin: 2% auto 0;
	position: relative;
}

.ballon p {
	font-family: 'museo_sans500';
	font-size: 24px;
	line-height: 36px;
	color: #000;
	color: rgba(0,0,0,0.75);
	margin: 0 0 3%;
	padding: 8% 12% 0;
}

.ballon a {
	color: white;
	font-family: 'museo_sans700';
	font-size: 14px;
	background: #66bc79;
	padding: 6px 12px;
	position: absolute;
	bottom: 110px;
	left: 50%;
	margin-left: -71px;
}

/*
	19
*/
.supported {
	width: 70%;
	text-align: left;
	margin: 0 15%;
}

.supported h3 {
	color: #000;
	color: rgba(0,0,0,0.75);
	font-size: 24px;
	line-height: 28px;
	font-family: 'museo_sans700';
}
/* ... */

